hw05/k8s/03-manifests/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw05-deployment
  labels:
    app: hw05-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw05-app
  template:
    metadata:
      labels:
        app: hw05-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8000"
        prometheus.io/scheme: "http"
        grafana.com/scrape: "true"
        grafana.com/port: "8000"
    spec:
      containers:
        - name: hw05-app
          image: a1exander78/hw05:latest
          imagePullPolicy: Never #тянул локально, тк была проблема с сетью
          ports:
            - containerPort: 8000
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
