hw05/k8s/03-manifests/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw05-service
  labels:
    app: hw05-app
spec:
  selector:
    app: hw05-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
